# InvestMindAI

./: .env.example  .gitignore  Dockerfile  Info.md  README.md  RUN.txt  docker-compose.yml  fix_postgres_permission.sql  init-db.sql  manage.py  pars.ipynb  pyproject.toml  setup.sh
django-email-auth/accounts/: admin.py  forms.py  models.py  urls.py  views.py
django-email-auth/config/: settings.py  urls.py
django-email-auth/templates/: base.html  home.html
django-email-auth/templates/accounts/: login.html  signup.html  verification_email.html
django_email_auth/: __init__.py
django_email_auth/accounts/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_email_auth/accounts/migrations/: 0001_initial.py
django_email_auth/config/: settings.py  urls.py  wsgi.py
django_email_auth/templates/: base.html  home.html
django_email_auth/templates/accounts/: login.html  signup.html  verification_email.html
notebooks/: kline_test.py  regresor_model.ipynb  Анализ_и_паттерны.ipynb
