[project]
name = "investmindai"
version = "0.1.0"
description = ""
authors = [
    {name = "CodeMonkeysGroup"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.10"

dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy",
    "matplotlib (>=3.10.3,<4.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "yfinance (>=0.2.63,<0.3.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
